fix(hidden-search): :lipstick: input takes up space when collapsed
Because they are inline by default, input respect the line height of their parrent. As a result, they take up space even when width, margins, padding and borders are set to zero. Fixed with applying display:flex to the parent element.

--- a/hidden-search/style.css
+++ b/hidden-search/style.css
@@ -17,6 +17,7 @@ body {
   background-color: black;
   padding: 12px 7px;
   border-radius: 10px;
+  display: flex;
 }
 .search-input {
   font-family: "Outfit", sans-serif;
@@ -26,10 +27,8 @@ body {
   border: none;
   border-width: 0;
   padding: 0px;
-  margin-left: -3px;
   width: 0px;
-
-  transition: all 0.4s ease;
+  transition: width 0.4s ease;
 }
 .search-input::placeholder {
   color: gainsboro;
